--- a/libft/Makefile
+++ b/libft/Makefile
@@ -5,38 +5,32 @@
 #                                                     +:+ +:+         +:+      #
 #    By: shdorlin <shdorlin@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2021/11/19 22:44:05 by shdorlin          #+#    #+#              #
-#    Updated: 2021/11/25 11:39:11 by shdorlin         ###   ########.fr        #
+#    Created: 2022/02/26 21:58:51 by shdorlin          #+#    #+#              #
+#    Updated: 2022/03/17 22:24:02 by shdorlin         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = libft.a
 CC = gcc
-AR = ar
 HEADER = libft.h
 CFLAGS = -Wall -Wextra -Werror
-ARFLAGS = rc
-SRCS = $(filter-out $(wildcard ft_lst*.c), $(wildcard *.c))
+SRCS = ft_one_sep.c ft_atoi.c ft_bzero.c ft_calloc.c ft_isalnum.c ft_isalpha.c ft_isascii.c ft_isdigit.c ft_isprint.c ft_itoa.c ft_lstadd_back.c ft_lstadd_front.c ft_lstclear.c ft_lstdelone.c ft_lstiter.c ft_lstlast.c ft_lstmap.c ft_lstnew.c ft_lstsize.c ft_memchr.c ft_memcmp.c ft_memcpy.c ft_memmove.c ft_memset.c ft_putchar_fd.c ft_putendl_fd.c ft_putnbr_fd.c ft_putstr_fd.c ft_split.c ft_strchr.c ft_strdup.c ft_striteri.c ft_strjoin.c ft_strlcat.c ft_strlcpy.c ft_strlen.c ft_strmapi.c ft_strncmp.c ft_strnstr.c ft_strrchr.c ft_strtrim.c ft_substr.c ft_tolower.c ft_toupper.c ft_gnl.c ft_gnljoin.c
 OBJS = $(SRCS:.c=.o)
-BONUS = $(wildcard ft_lst*.c)
-OBJS_B = $(BONUS:.c=.o)
-
 
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	$(AR) $(ARFLAGS) $(NAME) $(OBJS) 
+	ar rcs $(NAME) $(OBJS)
 
 %.o: %.c $(HEADER)
-	$(CC) $(CFLAGS) -c $< -o $@
-
-bonus: $(OBJS_B)
-	$(AR) $(ARFLAGS) $(NAME) *.o
+	$(CC) $(CFlAGS) -c $< -o $@
 
 clean:
-	rm -rf *.o
+	rm -f *.o
 
 fclean: clean
-	rm -rf $(NAME)
+	rm -f $(NAME)
 
 re: fclean all
+
+.PHONY: all clean fclean re bonus
